--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,5 +1,5 @@
 .card {
-  width: 300px;
+  width: 280px;
   height: 400px;
   border: 1px solid rgb(201, 200, 200);
   border-radius: 5%;
@@ -9,6 +9,7 @@
   align-items: center;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 10px;
   
 }
 
